# -otus-cpp-basics

./: .gitignore
05.homework/: CMakeLists.txt  README.txt
05.homework/include/: statistics.hpp
05.homework/src/: Max.cpp  Mean.cpp  Min.cpp  Std.cpp  statistics.cpp
06.homework/: CMakeLists.txt  README.txt
06.homework/include/: containers.hpp  iterator.hpp  listExt.hpp  vectorExt.hpp
06.homework/src/: containers.cpp  iterator.cpp  listExt.cpp  vectorExt.cpp
homework-3/: CMakeLists.txt  README.txt
homework-3/src/: CMakeLists.txt  game.cpp
homework-3/utilities/: CMakeLists.txt  utility.cpp  utility.h
homework-4/: CMakeLists.txt  README.md
homework-4/src/: addoperator.cpp  divoperator.cpp  muloperator.cpp  suboperator.cpp
